# snake

./: .gitignore  .gitmodules  CMakeLists.txt
include/: darray.h  shaderProgram.h  square.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: fs.glsl  vs.glsl
src/: darray.c  main.c  shaderProgram.c  square.c
